--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@capacitor/core": "^5.6.0",
+    "@capacitor/ios": "5.6.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
@@ -29,6 +31,7 @@
     "vanta": "^0.5.24"
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
